--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,10 +3,27 @@
 }
 
 .NavContainer{
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
-    height: auto;
     z-index: 2;
 }
 
+.SignIn{
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding-bottom: 100px;
+    background-color: aquamarine;
+}
+
+.ToggleGroup{
+    background-color: white;   
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.1);
+}
+
+.Toggle{
+    width: max( 187px, 14vw);
+}
