--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,3 +28,14 @@
 .Toggle{
     width: max( 187px, 14vw);
 }
+
+.Base{
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding-bottom: 100px;
+    background-color: wheat;
+}
