--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,7 +35,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 1000vh;
     padding-bottom: 100px;
     background-color: wheat;
+}
+
+.NoUser{
+    height: 100vh;
+    background-color: white;
 }
