--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,7 +35,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 1000vh;
+    height: 100vh;
     padding-bottom: 100px;
     background-color: wheat;
 }
@@ -43,4 +43,32 @@
 .NoUser{
     height: 100vh;
     background-color: white;
+}
+
+.Home{
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #EEEFF2;
+}
+
+.HomeImage{
+    background-image: url("../public/firstcard.jpg");
+    height: 400px;
+    width: 40vw;
+    background-size: cover;
+    margin-right: 5vw;
+}
+
+.HomeText{
+    color: #3C4852;
+    font-weight: 800;
+    font-size: 2.5em;
+    height: 200px;
+    width: 31vw;
+    margin-left: 10vw;
+    margin-top: 20vh;
+    /* border: 1px solid black; */
 }
