--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,10 +4,10 @@
 
 .NavContainer{
     position: fixed;
+    width: 100vw;
     top: 0;
-    width: 100%;
     z-index: 2;
-    transition: background-color 300ms ease-in 0s;
+    /* transition: background-color 200ms ease-in 0s; */
 }
 
 .SignIn{
@@ -35,7 +35,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 1000vh;
     padding-bottom: 100px;
     background-color: wheat;
 }
@@ -45,3 +44,23 @@
     background-color: white;
 }
 
+.Profile{
+    padding-top: 20px;
+}
+
+.ProfileCard{
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.1)
+}
+
+.ProfileDetails{
+    padding: 20px;
+}
+
+.PasswordDetails{
+    margin-top: 20px;
+}
