--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,6 @@
     width: 100vw;
     top: 0;
     z-index: 2;
-    /* transition: background-color 200ms ease-in 0s; */
 }
 
 .SignIn{
@@ -46,7 +45,8 @@
 }
 
 .Profile{
-    padding-top: 20px;
+    height: auto;
+    padding-top: 50px;
 }
 
 .ProfileCard{
