--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,10 +33,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100vh;
     padding-bottom: 100px;
-    background-color: wheat;
+    background-color: #EEEFF2;
 }
 
 .NoUser{
