--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,3 +93,19 @@
     margin-top: 20vh;
     /* border: 1px solid black; */
 }
+
+.Checkout{
+    position: relative;
+    height: auto;
+    width: 100vw;
+    padding-top: 100px;
+    background-color: #EEEFF2;
+    display: flex;
+    padding-left: 100px;
+    /* justify-content: space-evenly; */
+}
+
+.TotalCard{
+    position: fixed;
+    right: 100px;
+}
