--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,7 +36,7 @@
     justify-content: center;
     height: 100vh;
     padding-bottom: 100px;
-    background-color: wheat;
+    background-color: #EEEFF2;
 }
 
 .NoUser{
@@ -91,5 +91,4 @@
     width: 31vw;
     margin-left: 10vw;
     margin-top: 20vh;
-    /* border: 1px solid black; */
 }
