--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -30,3 +30,9 @@
     margin-right: auto;
     padding-top: 100px;
 }
+
+.Courses{
+    margin: "auto";
+    margin-left: "100px";
+    padding-top: 100px;
+}
