--- a/client/src/stylesheets/CheckOut.css
+++ b/client/src/stylesheets/CheckOut.css
@@ -1,47 +1,22 @@
-.Checkout{
-    position: relative;
-    height: auto;
-    width: 100vw;
-    padding-top: 100px;
-    background-color: #EEEFF2;
-    display: flex;
-    padding-left: 100px;
-    justify-content: space-evenly;
-}
-
-.TotalCard{
-    position: fixed;
-    right: 100px;
-}
-
-.Checkout{
-    position: relative;
-    height: auto;
-    width: 100vw;
-    padding-top: 100px;
-    background-color: #EEEFF2;
-    display: flex;
-    padding-left: 100px;
-    justify-content: space-evenly;
- }
-
-.TotalCard{
-    position: fixed;
-    right: 100px;
-}  */
-
-.TotalCard{
-    position: fixed;
-    right: 100px;
-}
 .CheckOut{
     position: relative;
-    height: auto;
-    width: 100vw;
+    padding: 20px; 
     padding-top: 100px;
-    background-color: #EEEFF2;
+    padding-bottom: 50px;
+    width: 100%;
     display: flex;
-    padding-left: 100px;
+    flex-direction: column;
     justify-content: space-evenly;
-    /* background-image: url("../../public/background.png"); */
+    background-color: #EEEFF2;
+}
+
+.Heading{
+    width: 100%;
+    margin-bottom: 30px;
+    padding-left: 100px;
+}
+
+.CheckOutBox{
+    display: flex;
+    justify-content: space-around;
 }
