--- a/client/src/stylesheets/CheckOut.css
+++ b/client/src/stylesheets/CheckOut.css
@@ -12,7 +12,8 @@
 
 .Heading{
     width: 100%;
-    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-bottom: 50px;
     padding-left: 100px;
 }
 
