--- a/client/src/stylesheets/Courses.css
+++ b/client/src/stylesheets/Courses.css
@@ -15,9 +15,20 @@
     margin-top: 20px;
     margin-bottom: 50px;
     padding-left: 100px;
+    padding-right: 100px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .CoursesBox{
     display: flex;
     justify-content: space-around;
+}
+
+.SearchBarContainer{
+    border: 1px solid white;
+    border-radius: 8px;
+    width: 250px;
+    background-color: white;
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.1);
 }
